--- a/src/register.html
+++ b/src/register.html
@@ -19,7 +19,7 @@
             <li><a href="/src/news.html">NOTICIAS</a></li>
             <li><a href="/src/shop.html">TIENDA</a></li>
             <li><a href="/src/concerts.html">CONCIERTOS</a></li>
-            <li class="active"><a href="/src/lyrics.html">LETRAS</a></li>
+            <li><a href="/src/lyrics.html">LETRAS</a></li>
           </ul>
         <a class="register" href="/src/profile.html">Entrar</button>
       </nav>
